table societe et salarié

--- a/helloworld/src/app/home/home.component.html
+++ b/helloworld/src/app/home/home.component.html
@@ -1,4 +1,21 @@
-<p>
-  home works!
-</p>
-{{result?.name}}
+<!--{{result?.name}}-->
+
+<!--<h3 class="first">Basic</h3>
+<p-menu [model]="items"></p-menu>-->
+
+
+<!--<p-menu #menu [popup]="true" [model]="items"></p-menu>
+<button type="button" pButton icon="pi pi-bars" label="Show" (click)="menu.toggle($event)">Menu</button>-->
+
+<ul>
+  <li>
+    <a routerLink='/salarier'>Salarié</a>
+ </li>
+ <li>
+  <a  routerLink='/societe'>Société</a>
+</li>
+</ul>
+<router-outlet></router-outlet>
+
+
+
